--- a/geomelody/geomelody/en.lproj/PlayerViewController.xib
+++ b/geomelody/geomelody/en.lproj/PlayerViewController.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 300}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="83102700"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -53,6 +54,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 6}, {213, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="727923543"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -83,6 +85,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 26}, {213, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="109698914"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -112,8 +115,9 @@
 							<object class="IBUIButton" id="784089984">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{128, 68}, {64, 64}}</string>
+								<string key="NSFrame">{{128, 93}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="542955711"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -147,8 +151,9 @@
 							<object class="IBUIButton" id="575022889">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{262, 174}, {64, 64}}</string>
+								<string key="NSFrame">{{262, 180}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="584665343"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -173,8 +178,9 @@
 							<object class="IBUIButton" id="542955711">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{-6, 174}, {64, 64}}</string>
+								<string key="NSFrame">{{-6, 180}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="575022889"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -197,8 +203,9 @@
 								<reference key="IBUIFont" ref="495722117"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 55}, {320, 200}}</string>
+						<string key="NSFrame">{{0, 49}, {320, 249}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="784089984"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -213,6 +220,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{113, 306}, {201, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -245,6 +253,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 306}, {100, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="633299990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -255,6 +264,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{255, 5}, {58, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1063613071"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -278,6 +288,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="731627572"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
@@ -454,9 +465,9 @@
 						<int key="objectID">35</int>
 						<reference key="object" ref="1063613071"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="784089984"/>
 							<reference ref="575022889"/>
 							<reference ref="542955711"/>
+							<reference ref="784089984"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -481,9 +492,9 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">31</int>
-						<reference key="object" ref="575022889"/>
-						<reference key="parent" ref="1063613071"/>
+						<int key="objectID">53</int>
+						<reference key="object" ref="109698914"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">29</int>
@@ -491,9 +502,9 @@
 						<reference key="parent" ref="1063613071"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">53</int>
-						<reference key="object" ref="109698914"/>
-						<reference key="parent" ref="191373211"/>
+						<int key="objectID">31</int>
+						<reference key="object" ref="575022889"/>
+						<reference key="parent" ref="1063613071"/>
 					</object>
 				</array>
 			</object>
@@ -520,9 +531,144 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">56</int>
+			<int key="maxID">60</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">NSTimer</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSTimer.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PlayerViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="playNextSong:">id</string>
+						<string key="playPreviousSong:">id</string>
+						<string key="togglePlayingState:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="playNextSong:">
+							<string key="name">playNextSong:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="playPreviousSong:">
+							<string key="name">playPreviousSong:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="togglePlayingState:">
+							<string key="name">togglePlayingState:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="activityTimer">NSTimer</string>
+						<string key="artwork_picture">UIImageView</string>
+						<string key="lastActivityDate">NSDate</string>
+						<string key="likes">UILabel</string>
+						<string key="nextButton">UIButton</string>
+						<string key="pauseStart">NSDate</string>
+						<string key="playPauseButton">UIButton</string>
+						<string key="post_button">UIButton</string>
+						<string key="previousButton">UIButton</string>
+						<string key="previousFireDate">NSDate</string>
+						<string key="shares">UILabel</string>
+						<string key="songInterpreter">UILabel</string>
+						<string key="songProgressControl">UICircularSlider</string>
+						<string key="songProgressTimer">NSTimer</string>
+						<string key="songTitle">UILabel</string>
+						<string key="user_comment">UITextView</string>
+						<string key="user_picture">UIImageView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="activityTimer">
+							<string key="name">activityTimer</string>
+							<string key="candidateClassName">NSTimer</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="artwork_picture">
+							<string key="name">artwork_picture</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="lastActivityDate">
+							<string key="name">lastActivityDate</string>
+							<string key="candidateClassName">NSDate</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="likes">
+							<string key="name">likes</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nextButton">
+							<string key="name">nextButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="pauseStart">
+							<string key="name">pauseStart</string>
+							<string key="candidateClassName">NSDate</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playPauseButton">
+							<string key="name">playPauseButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="post_button">
+							<string key="name">post_button</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="previousButton">
+							<string key="name">previousButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="previousFireDate">
+							<string key="name">previousFireDate</string>
+							<string key="candidateClassName">NSDate</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shares">
+							<string key="name">shares</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songInterpreter">
+							<string key="name">songInterpreter</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songProgressControl">
+							<string key="name">songProgressControl</string>
+							<string key="candidateClassName">UICircularSlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songProgressTimer">
+							<string key="name">songProgressTimer</string>
+							<string key="candidateClassName">NSTimer</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="songTitle">
+							<string key="name">songTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="user_comment">
+							<string key="name">user_comment</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="user_picture">
+							<string key="name">user_picture</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PlayerViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UICircularSlider</string>
+					<string key="superclassName">UIControl</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UICircularSlider.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
