--- a/geomelody/geomelody/SongCell.xib
+++ b/geomelody/geomelody/SongCell.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12C60</string>
+		<string key="IBDocument.SystemVersion">12E55</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.34</string>
-		<string key="IBDocument.HIToolboxVersion">625.00</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
+		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">2083</string>
@@ -57,53 +57,6 @@
 									<string key="NSResourceName">songcell_background.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="755313303">
-								<reference key="NSNextResponder" ref="735591696"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{258, 108}, {39, 19}}</string>
-								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="567944333"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Likes</string>
-								<object class="NSColor" key="IBUITextColor" id="366667436">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
-								<int key="IBUITextAlignment">2</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="231749328">
-									<int key="type">1</int>
-									<double key="pointSize">12</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="983565257">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">12</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
-							<object class="IBUIImageView" id="128807489">
-								<reference key="NSNextResponder" ref="735591696"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 112}, {12, 12}}</string>
-								<reference key="NSSuperview" ref="735591696"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="737727301"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">play32.png</string>
-								</object>
-							</object>
 							<object class="IBUILabel" id="737727301">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
@@ -118,7 +71,10 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Title</string>
-								<reference key="IBUITextColor" ref="366667436"/>
+								<object class="NSColor" key="IBUITextColor" id="366667436">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
@@ -160,6 +116,21 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="631132510">
+								<reference key="NSNextResponder" ref="735591696"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{299, 128}, {12, 12}}</string>
+								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="928199358"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">heart32.png</string>
+								</object>
+							</object>
 							<object class="IBUILabel" id="567944333">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
@@ -178,23 +149,29 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
-								<reference key="IBUIFontDescription" ref="231749328"/>
-								<reference key="IBUIFont" ref="983565257"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="231749328">
+									<int key="type">1</int>
+									<double key="pointSize">12</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="517527954">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">12</double>
+									<int key="NSfFlags">16</int>
+								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="631132510">
+							<object class="IBUIImageView" id="928199358">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 128}, {12, 12}}</string>
+								<string key="NSFrame">{{299, 143}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="928199358"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">heart32.png</string>
+									<string key="NSResourceName">retweet32.png</string>
 								</object>
 							</object>
 							<object class="IBUILabel" id="1067743792">
@@ -216,22 +193,45 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
 								<reference key="IBUIFontDescription" ref="231749328"/>
-								<reference key="IBUIFont" ref="983565257"/>
+								<reference key="IBUIFont" ref="517527954"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
-							<object class="IBUIImageView" id="928199358">
+							<object class="IBUIImageView" id="128807489">
 								<reference key="NSNextResponder" ref="735591696"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{299, 143}, {12, 12}}</string>
+								<string key="NSFrame">{{299, 112}, {12, 12}}</string>
 								<reference key="NSSuperview" ref="735591696"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="737727301"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">retweet32.png</string>
+									<string key="NSResourceName">play32.png</string>
 								</object>
+							</object>
+							<object class="IBUILabel" id="755313303">
+								<reference key="NSNextResponder" ref="735591696"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{258, 108}, {39, 19}}</string>
+								<reference key="NSSuperview" ref="735591696"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="567944333"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Likes</string>
+								<reference key="IBUITextColor" ref="366667436"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUITextAlignment">2</int>
+								<reference key="IBUIFontDescription" ref="231749328"/>
+								<reference key="IBUIFont" ref="517527954"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 159}</string>
@@ -312,6 +312,30 @@
 					</object>
 					<int key="connectionID">159</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">playsImage</string>
+						<reference key="source" ref="1040207467"/>
+						<reference key="destination" ref="128807489"/>
+					</object>
+					<int key="connectionID">160</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">sharesImage</string>
+						<reference key="source" ref="1040207467"/>
+						<reference key="destination" ref="928199358"/>
+					</object>
+					<int key="connectionID">161</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">likesImage</string>
+						<reference key="source" ref="1040207467"/>
+						<reference key="destination" ref="631132510"/>
+					</object>
+					<int key="connectionID">162</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -339,11 +363,11 @@
 							<reference ref="580246965"/>
 							<reference ref="737727301"/>
 							<reference ref="518002529"/>
-							<reference ref="631132510"/>
 							<reference ref="567944333"/>
 							<reference ref="1067743792"/>
 							<reference ref="755313303"/>
 							<reference ref="128807489"/>
+							<reference ref="631132510"/>
 							<reference ref="928199358"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -416,7 +440,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">159</int>
+			<int key="maxID">162</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -426,7 +450,9 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="likes">UILabel</string>
 						<string key="plays">UILabel</string>
+						<string key="playsImage">UIImageView</string>
 						<string key="shares">UILabel</string>
+						<string key="sharesImage">UIImageView</string>
 						<string key="songImage">UIImageView</string>
 						<string key="songInterpreter">UILabel</string>
 						<string key="songTitle">UILabel</string>
@@ -440,9 +466,17 @@
 							<string key="name">plays</string>
 							<string key="candidateClassName">UILabel</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="playsImage">
+							<string key="name">playsImage</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="shares">
 							<string key="name">shares</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sharesImage">
+							<string key="name">sharesImage</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="songImage">
 							<string key="name">songImage</string>
